--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: freelancermap-extractor
+    name: fm-extract
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
