--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,9 @@ services:
   - type: web
     name: fm-extract
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      apt-get update
+      apt-get install -y chromium chromium-driver
+      pip install -r requirements.txt
     startCommand: python app.py
     plan: free
