--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     buildCommand: |
       apt-get update
       apt-get install -y chromium
+      chmod +x chromedriver
       pip install -r requirements.txt
     startCommand: python app.py
     plan: free
